Fixed overlapping elements on home page

--- a/public/css/slideshow.css
+++ b/public/css/slideshow.css
@@ -5,7 +5,7 @@
 .slideshow-container {
     position: relative;
     width: 100%;
-    height: 120vh;
+    height: 150vh;
     /* Adjust the height as needed */
     overflow: hidden;
 }
@@ -35,3 +35,4 @@
     justify-content: center;
     align-items: center;
 }
+
