--- a/public/css/style.css
+++ b/public/css/style.css
@@ -490,12 +490,7 @@ textarea::placeholder{
 }
 
 
-/* Slideshow container */
-.slideshow-container {
-    position: relative;
-    margin: auto;
-    z-index: -1;
-}
+
 
 /* Hide the images by default */
 .mySlides {
